[workspace]
resolver = "2"
members = [
  ## Read and parse files with fancy error with miette
  "pipelight_error",
  ## Small utils crate
  "pipelight_config",
  "pipelight_utils",
  ## Process management
  "pipelight_exec",
  "pipelight_git",
  "pipelight_teleport",
  ## Watchexec sane and reusable configuration.
  "pipelight_watcher",
  ## A templating crate for default pipelight configuration generation
  "templates",

  ## Read multiple file formats and casts them to pipelight config
  "cast",
  ## Core crates with interdependencies
  "workflow",
  "cli",
  ## Bin package and Lib entrypoint
  "pipelight",
  "man",

  # Wasm
  "deno_lib",
]

[workspace.dependencies]
# getrandom = { version = "0.2.15", features = ["wasm-bindgen"] }
thiserror = "2.0.12"
miette = "7.2.0"
log = "0.4.22"
bon = "3.6.3"

toml = { version = "0.9.5", features = ["parse", "preserve_order"] }
hcl-rs = "0.18.0"
serde_yaml = "0.9.34"

pretty_assertions = "1.4.1"
serial_test = "3.2.0"
itertools = "0.14.0"

uuid = "1.10.0"
once_cell = "1.19.0"
convert_case = "0.8.0"

[profile.release]
lto = true
