[package]
name = "cast"
version = "0.5.8"
edition = "2021"

[dependencies]
pipelight_error = { path = "../pipelight_error" }
pipelight_files = { path = "../pipelight_files" }
pipelight_utils = { path = "../pipelight_utils" }
pipelight_exec = { path = "../pipelight_exec" }
serde = { version = "1.0.208", features = ["derive"] }
miette = { version = "7.2.0" }
thiserror = "1.0.63"
log = "0.4.22"
serde_json = "1.0.125"
toml = { version = "0.8.19", features = ["parse"] }
hcl-rs = "0.18.0"
serde_yaml = "0.9.34"
kdl = "4.6.0"
serde_kdl = "0.1.0"
