[package]
name = "cast"
version = "0.5.9"
edition = "2021"
license = "GPL-2.0-only"
description = "Multiple file format to rust struct"

[dependencies]
miette.workspace = true
log.workspace = true

pipelight_error = { path = "../pipelight_error" }
pipelight_exec = { path = "../pipelight_exec" }
pipelight_utils = { path = "../pipelight_utils" }

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
toml = { version = "0.9.5", features = ["parse"] }
serde_yaml = "0.9.34"
hcl-rs = "0.19.2"
