[package]
name = "cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
miette.workspace = true

workflow = { path = "../workflow" }
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils" }
pipelight_exec = { path = "../pipelight_exec" }
pipelight_watcher = { path = "../pipelight_watcher" }
pipelight_error = { version = "0.2.10", path = "../pipelight_error" }
pipelight_teleport = { path = "../pipelight_teleport" }
pipelight_git = { path = "../pipelight_git" }
cast = { path = "../cast" }

# chrono = { version = "0.4.38", features = ["serde"] }
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
log = "0.4.22"
once_cell = "1.19.0"
convert_case = "0.8.0"
# clap
clap = { version = "4.5.16", features = ["derive", "wrap_help", "cargo"] }
clap_complete = "4.5.19"
dialoguer = "0.11.0"
assert_cmd = "2.0.16"
# serde
serde = { version = "1.0.208", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.125"
# async
tokio = "1.39.3"
rayon = "1.10.0"
watchexec = "4.1.0"
watchexec-events = "3.0.0"
watchexec-signals = "3.0.0"
watchexec-filterer-ignore = "4.0.1"
env_logger = "0.11.5"

[build-dependencies]
miette.workspace = true

workflow = { path = "../workflow" }
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils" }
pipelight_exec = { path = "../pipelight_exec" }
pipelight_watcher = { path = "../pipelight_watcher" }
pipelight_error = { version = "0.2.10", path = "../pipelight_error" }
pipelight_teleport = { path = "../pipelight_teleport" }
pipelight_git = { path = "../pipelight_git" }
cast = { path = "../cast" }

# chrono = { version = "0.4.38", features = ["serde"] }
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
log = "0.4.22"
once_cell = "1.19.0"
convert_case = "0.8.0"

# clap
clap = { version = "4.5.16", features = ["derive", "wrap_help", "cargo"] }
clap_complete = "4.5.19"
dialoguer = "0.11.0"
assert_cmd = "2.0.16"

# serde
serde = { version = "1.0.208", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.125"

# async
tokio = "1.39.3"
rayon = "1.10.0"
watchexec = "4.1.0"
watchexec-events = "3.0.0"
watchexec-signals = "3.0.0"
watchexec-filterer-ignore = "4.0.1"
watchexec-supervisor = "2.0.0"
env_logger = "0.11.5"
