[package]
name = "deno_lib"
version = "0.5.9"
edition = "2021"
license = "GPL-2.0-only"
description = "Pipelight types and function to help writting pipelines."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
miette = { version = "7.2.0" }
log = "0.4.22"
wasm-bindgen = "0.2.99"
tsify = "0.5.5"
# getrandom = { version = "0.2.15", features = ["wasm-bindgen"] }
