[package]
name = "error"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
colored = "2.0.0"
log = "0.4.17"
serde = { version = "1.0.152" ,features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.1.2", features = [ "v4","serde","fast-rng","macro-diagnostics"]}
once_cell = "1.16.0"
convert_case = "0.6.0"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
regex = "1.7.1"
serde_yaml = "0.9.19"
toml = "0.7.3"
strum = { version = "0.24.1", features = ["derive"] }
glob = "0.3.1"
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }

