[package]
name = "exec"
version = "0.2.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
convert_case = "0.6.0"
failure = "0.1.8"
futures = "0.3.27"
interactive_process = "0.1.2"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
serde = { version = "1.0.152" ,features = ["derive"] }
subprocess = "0.2.9"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
tokio-process = "0.2.5"

