[package]
name = "pipelight"
version = "0.6.19"
edition = "2021"
authors = ["areskul"]
description = "A Rust/Typescript based absurd automation tool"
homepage = "pipelight.dev"
repository = "git@github.com:pipelight/pipelight.git"
license = "GPL-2.0-only"

[lib]
name = "pipelight"
path = "src/lib.rs"

[[bin]]
name = "pipelight"
path = "src/main.rs"
doc = false

[dependencies]
pipelight_utils = { path = "../pipelight_utils" }
switch = { path = "../switch", version = "*" }
cli = { path = "../cli", version = "*" }
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy", "backtrace"] }
owo-colors = "3.5.0"
