[package]
name = "pipelight"
version = "0.10.0"
edition = "2021"
authors = ["areskul"]
description = "A Rust/Typescript based absurd automation tool"
homepage = "pipelight.dev"
repository = "git@github.com:pipelight/pipelight.git"
license = "GPL-2.0-only"

[lib]
name = "pipelight"
path = "src/lib.rs"

[[bin]]
name = "pipelight"
path = "src/main.rs"
doc = false

[dependencies]
miette = { workspace = true, features = ["fancy", "backtrace"] }
log = { workspace = true }

owo-colors = "4.2.2"

pipelight_utils = { path = "../pipelight_utils" }
pipelight_error = { path = "../pipelight_error" }
cli = { path = "../cli" }
