[package]
name = "pipelight_core"
version = "0.6.19"
edition = "2021"
authors = ["areskul"]
description = "A Rust based absurd automation tool"
homepage = "pipelight.dev"
repository = "git@github.com:pipelight/pipelight.git"
license = "GPL2"

# default-run = "pipelight"

[dependencies]
utils = { path = "../utils" }
switch = { path = "../switch" }
log = "0.4.17"
miette = { version = "5.5.0", features = ["backtrace"] }
owo-colors = "3.5.0"
