[package]
name = "pipelight_error"
publish = true
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "Pipeligh Error types"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
miette = "7.2.0"
serde_plain = "1.0.2"
thiserror = "2.0.12"
colored = "3.0.0"
serde_json = "1.0.125"
toml = { version = "0.8.19", features = ["parse", "preserve_order"] }
hcl-rs = "0.18.0"
serde_yaml = "0.9.34"
