[package]
name = "pipelight_error"
publish = true
version = "0.3.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Pipeligh Error types"

[dependencies]

serde = { version = "1.0.208", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.125"
colored = "3.0.0"

miette = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse", "preserve_order"] }
hcl-rs = { workspace = true }
serde_yaml = { workspace = true }
