[package]
name = "pipelight_exec"
version = "0.4.1"
edition = "2021"
license = "GPL-2.0-only"
description = "Easy process management"

[features]
fd = ["dep:procfs"]

[dependencies]
pipelight_error = "0.2.10"
log = "0.4.22"
uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
serde = { version = "1.0.208", features = ["derive"] }
convert_case = "0.6.0"
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
thiserror = "1.0.63"
colored = "2.1.0"
subprocess = "0.2.9"
rustix = { version = "0.38.34", features = ["process"] }
sysinfo = "0.31.2"
itertools = "0.13.0"
bon = "2.3.0"

# optional deps
procfs = { version = "0.17.0", optional = true }
shell-words = "1.1.0"
