[package]
name = "pipelight_exec"
publish = true
version = "0.4.7"
edition = "2021"
license = "GPL-2.0-only"
description = "Easy process management"

[dependencies]
pipelight_error = "0.2.12"
log = "0.4.22"
uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
serde = { version = "1.0.208", features = ["derive"] }
convert_case = "0.8.0"
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.12"
colored = "3.0.0"
subprocess = "0.2.9"
rustix = { version = "1.0.7", features = ["process"] }
sysinfo = "0.35.1"
itertools = "0.14.0"
bon = "3.6.3"
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
