[package]
name = "pipelight_exec"
publish = true
version = "0.4.10"
edition = "2021"
license = "GPL-2.0-only"
description = "Easy process management"

[dependencies]
miette.workspace = true
log.workspace = true

once_cell.workspace = true
itertools.workspace = true
convert_case.workspace = true
bon.workspace = true

uuid = { workspace = true, features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }

pipelight_error = "0.2.12"

serde = { version = "1.0.208", features = ["derive"] }

owo-colors = "4.2.2"

iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }

rustix = { version = "1.0.7", features = ["process"] }
sysinfo = "0.37.0"


[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
