[package]
name = "pipelight_git"
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "A small git compatibility layer"

[dependencies]
pipelight_error = "0.2.10"
gix = { version = "0.72.1", default-features = false }
rev_buf_reader = "0.3.0"
log = "0.4.22"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
convert_case = "0.8.0"
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
ignore-files = "3.0.1"
subprocess = "0.2.9"
itertools = "0.14.0"
