[package]
name = "pipelight_git"
publish = false
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "A small git compatibility layer"

[dependencies]
miette.workspace = true
log.workspace = true

convert_case.workspace = true

serde = { version = "1.0.208", features = ["derive"] }
serde_plain = "1.0.2"
strum = { version = "0.27.1", features = ["derive"] }

gix = { version = "0.73.0", default-features = false }
