[package]
name = "pipelight_teleport"
version = "0.2.9"
edition = "2021"
license = "GPL-2.0-only"
description = "Find and load files wherever in the filesystem"

[dependencies]
pipelight_error = "0.2.10"
# pipelight_error = { path = "../pipelight_error" }
pipelight_git = "0.2.10"
# pipelight_git = { path = "../pipelight_git" }
# pipelight_utils = "0.2.11"
pipelight_utils = { path = "../pipelight_utils" }

log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
convert_case = "0.6.0"
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
thiserror = "1.0.63"
itertools = "0.13.0"
serde_json = "1.0.125"
