[package]
name = "pipelight_teleport"
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "Find and load files wherever in the filesystem"

[dependencies]
# pipelight_error = "0.2.12"
pipelight_error = { path = "../pipelight_error" }
# pipelight_git = "0.2.12"
pipelight_git = { path = "../pipelight_git" }
# pipelight_utils = "0.2.12"
pipelight_utils = { path = "../pipelight_utils" }

log = "0.4.22"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
serde_json = "1.0.125"
