[package]
name = "pipelight_teleport"
publish = true
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "Find and load files wherever in the filesystem"

[dependencies]
miette.workspace = true
log.workspace = true

# pipelight_error = "0.2.12"
pipelight_error = { path = "../pipelight_error" }
# pipelight_git = "0.2.12"
pipelight_git = { path = "../pipelight_git" }
# pipelight_utils = "0.2.12"
pipelight_utils = { path = "../pipelight_utils" }

strum = { version = "0.27.1", features = ["derive"] }
