[package]
name = "pipelight_utils"
version = "0.2.2"
edition = "2021"
license = "GPL-2.0-only"
description = "A set of trivial utilities for command line tools"

[dependencies]
git2 = "0.16.1"
rev_buf_reader = "0.3.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = [
  "json_encoder",
  "pattern_encoder",
  "size_trigger",
  "console_appender",
  "file_appender",
] }
uuid = { version = "1.1.2", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
convert_case = "0.6.0"
once_cell = "1.16.0"
miette = "5.5.0"
serde_plain = "1.0.1"
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
ignore-files = "1.3.1"
project-origins = "1.2.0"
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
console = "0.15.7"
thiserror = "1.0.50"
colored = "2.0.0"
subprocess = "0.2.9"
rustix = { version = "0.38.25", features = ["process"] }
sysinfo = "0.29.2"
itertools = "0.11.0"
serde_json = "1.0.93"
toml = { version = "0.7.3", features = ["parse"] }
hcl-rs = "0.18.0"
serde_yaml = "0.9.19"
