[package]
name = "pipelight_utils"
publish = true
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "A set of trivial utilities for command line tools"

[dependencies]
# pipelight_error = "0.2.12"
pipelight_error = { path = "../pipelight_error" }
rev_buf_reader = "0.3.0"
log = "0.4.22"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
convert_case = "0.8.0"
once_cell = "1.19.0"
miette = "7.2.0"
serde_plain = "1.0.2"
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
ignore-files = "3.0.1"
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
console = "0.15.8"
subprocess = "0.2.9"
sysinfo = "0.35.1"
itertools = "0.14.0"
serde_json = "1.0.125"
toml = { version = "0.9.5", features = ["parse"] }
hcl-rs = "0.18.0"
serde_yaml = "0.9.34"
