[package]
name = "pipelight_utils"
publish = true
version = "0.2.12"
edition = "2021"
license = "GPL-2.0-only"
description = "A set of trivial utilities for command line tools"

[dependencies]
miette.workspace = true
log.workspace = true

once_cell.workspace = true

# pipelight_error = "0.2.12"
# pipelight_error = { path = "../pipelight_error" }

rev_buf_reader = "0.3.0"

strum = { version = "0.27.1", features = ["derive"] }

signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
console = "0.15.8"
