[package]
name = "pipelight_watcher"
publish = false
version = "0.1.3"
edition = "2021"

[dependencies]
miette.workspace = true
log.workspace = true

pipelight_teleport = { path = "../pipelight_teleport" }
pipelight_exec = { path = "../pipelight_exec" }

owo-colors = "4.2.2"

assert_cmd = "2.0.16"

# async
tokio = "1.39.3"
watchexec = "4.1.0"
watchexec-events = "3.0.0"
watchexec-signals = "3.0.0"
watchexec-filterer-ignore = "4.0.1"
ignore-files = "3.0.1"
