[package]
name = "pipeline"
version = "0.2.0"
edition = "2021"

[dependencies]
exec = {path = "../exec" }
utils = {path = "../utils" }
chrono = "0.4.23"
colored = "2.0.0"
log = "0.4.17"
serde = { version = "1.0.147" ,features = ["derive"] }
serde_json = "1.0.89"
sysinfo = "0.27.0"
uuid = { version = "1.2.2", features = [ "v4","serde","fast-rng","macro-diagnostics"]}
once_cell = "1.17.0"
convert_case = "0.6.0"
rayon = "1.6.1"
arc-swap = "1.6.0"
lock_api = "0.4.9"

