[package]
name = "pipeline"
version = "0.3.0"
edition = "2021"

[dependencies]
exec = {path = "../exec" }
utils = {path = "../utils" }
typescript = {path = "../typescript" }
chrono = "0.4.23"
colored = "2.0.0"
log = "0.4.17"
serde = { version = "1.0.152" ,features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.1"
uuid = { version = "1.1.2", features = [ "v4","serde","fast-rng","macro-diagnostics"]}
once_cell = "1.16.0"
convert_case = "0.6.0"
rayon = "1.6.1"
arc-swap = "1.6.0"
lock_api = "0.4.9"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
regex = "1.7.1"
serde_yaml = "0.9.19"
toml = "0.7.3"
strum = { version = "0.24.1", features = ["derive"] }
glob = "0.3.1"

