[package]
name = "services"
version = "0.4.2"
edition = "2021"

[dependencies]
actions = {path = "../actions" }
cli = {path = "../cli" }
exec = {path = "../exec" }
utils = {path = "../utils" }
log = "0.4.17"
once_cell = "1.16.0"
convert_case = "0.6.0"
miette = { version = "5.5.0" }
thiserror = "1.0.38"
strum = { version = "0.24.1", features = ["derive"] }
glob = "0.3.1"
assert_cmd = "2.0.11"
watchexec = "2.3.0"
tokio = "1.32.0"
watchexec-events = "1.0.0"
