[package]
name = "shared"
version = "0.2.0"
edition = "2021"

[dependencies]
exec = {path = "../exec" }
pipeline = {path = "../pipeline" }
utils = {path = "../utils" }
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive","wrap_help"]}
clap-verbosity-flag = "2.0.0"
git2 = "0.15.0"
log = "0.4.17"
project-root = "0.2.2"
serde = { version = "1.0.147" ,features = ["derive"] }
serde_json = "1.0.89"
sysinfo = "0.27.0"
uuid = { version = "1.2.2", features = [ "v4","serde","fast-rng","macro-diagnostics"]}
