[package]
name = "shared"
version = "0.2.0"
edition = "2021"

[dependencies]
exec = {path = "../exec" }
pipeline = {path = "../pipeline" }
utils = {path = "../utils" }
chrono = "0.4.23"
clap = { version = "4.3.1", features = ["derive","wrap_help"]}
clap-verbosity-flag = "2.0.0"
git2 = "0.16.1"
log = "0.4.17"
project-root = "0.2.2"
serde = { version = "1.0.152" ,features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.1"
uuid = { version = "1.1.2", features = [ "v4","serde","fast-rng","macro-diagnostics"]}
dialoguer = "0.10.3"
thiserror = "1.0.40"
miette = { version = "5.6.0", features = ["fancy"] }
once_cell = "1.18.0"
