[package]
name = "switch"
version = "0.4.2"
edition = "2021"

[dependencies]
cli = { path = "../cli" }
workflow = { path = "../workflow" }
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils" }
cast = { path = "../cast" }
clap = "4.3.1"
log = "0.4.17"
once_cell = "1.16.0"
miette = { version = "5.5.0" }
assert_cmd = "2.0.11"
