[package]
name = "switch"
version = "0.4.2"
edition = "2021"

[dependencies]
cli = { path = "../cli" }
workflow = { path = "../workflow" }
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils" }
cast = { path = "../cast" }
clap = "4.5.16"
log = "0.4.22"
once_cell = "1.19.0"
miette = { version = "7.2.0" }
assert_cmd = "2.0.16"
