[package]
name = "templates"
version = "0.0.2"
edition = "2021"

[dependencies]
pipelight_utils = { path = "../pipelight_utils" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
miette = { version = "7.2.0" }
serde_yaml = "0.9.34"
log = "0.4.22"
toml = { version = "0.9.5", features = ["parse"] }
handlebars = { version = "6.0.0", features = ["rust-embed"] }
serde_plain = "1.0.2"
convert_case = "0.8.0"
rust-embed = "8.5.0"
