[package]
name = "templates"
version = "0.0.2"
edition = "2021"

[dependencies]
miette.workspace = true

convert_case.workspace = true

pipelight_utils = { path = "../pipelight_utils" }

serde = { version = "1.0.208", features = ["derive"] }
serde_plain = "1.0.2"

handlebars = { version = "6.0.0", features = ["rust-embed"] }
rust-embed = "8.5.0"
