[package]
name = "workflow"
version = "0.4.1"
edition = "2021"

[dependencies]
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils", features = ["git"] }
pipelight_exec = { path = "../pipelight_exec" }
cast = { path = "../cast" }
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
once_cell = "1.19.0"
convert_case = "0.6.0"
rayon = "1.10.0"
miette = { version = "7.2.0" }
thiserror = "1.0.63"
regex = "1.10.6"
strum = { version = "0.26.3", features = ["derive"] }
glob = "0.3.1"
rustix = { version = "0.38.34", features = ["process"] }
serde_plain = "1.0.2"
