[package]
name = "workflow"
version = "0.4.2"
edition = "2021"

[dependencies]
templates = { path = "../templates" }
pipelight_utils = { path = "../pipelight_utils" }
pipelight_git = { path = "../pipelight_git" }
pipelight_exec = { path = "../pipelight_exec" }
cast = { path = "../cast" }
chrono = { version = "0.4.38", features = ["serde"] }
colored = "3.0.0"
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
once_cell = "1.19.0"
convert_case = "0.8.0"
rayon = "1.10.0"
miette = { version = "7.2.0" }
regex = "1.10.6"
strum = { version = "0.27.1", features = ["derive"] }
glob = "0.3.1"
rustix = { version = "1.0.7", features = ["process"] }
serde_plain = "1.0.2"
owo-colors = "4.1.0"
tabled = { version = "0.19.0", features = ["ansi"] }
