[package]
name = "workflow"
version = "0.4.2"
edition = "2021"

[dependencies]
miette.workspace = true
log = { workspace = true, features = ["serde"] }

once_cell.workspace = true
convert_case.workspace = true

pipelight_utils = { path = "../pipelight_utils" }
pipelight_git = { path = "../pipelight_git" }
pipelight_exec = { path = "../pipelight_exec" }
cast = { path = "../cast" }


serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_plain = "1.0.2"
strum = { version = "0.27.1", features = ["derive"] }

uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }

owo-colors = "4.2.2"
chrono = { version = "0.4.38", features = ["serde"] }
rayon = "1.10.0"
regex = "1.10.6"
glob = "0.3.1"
rustix = { version = "1.0.7", features = ["process"] }

tabled = { version = "0.19.0", features = ["ansi"] }
